syntax = "proto3";

package proto;

// Protobuf message implementation for struct Tx
message Tx {
  repeated TXIn Vin = 1;
  repeated TXOut Vout = 2;
  string Fee = 3;
}

// Protobuf message implementation for struct TXOut
message TXOut {
  oneof utxo {
    ValueStore ValueStore = 2;
    DataStore DataStore = 3;
  }
}

// Protobuf message implementation for struct TXIn
message TXIn {
  TXInLinker TXInLinker = 1;
  string Signature = 2;
}

// Protobuf message implementation for struct TXInLinker
message TXInLinker {
  TXInPreImage TXInPreImage = 1;
  string TxHash = 2;
}

// Protobuf message implementation for struct TXInPreImage
message TXInPreImage {
  uint32 ChainID = 1;
  uint32 ConsumedTxIdx = 2;
  string ConsumedTxHash = 3;
}

// Protobuf message implementation for struct ValueStore
message ValueStore {
  VSPreImage VSPreImage = 1;
  string TxHash = 2;
}

// Protobuf message implementation for struct VSPreImage
message VSPreImage {
  uint32 ChainID = 1;
  string Value = 2;
  uint32 TXOutIdx = 3;
  string Owner = 4;
  string Fee = 5;
}

// Protobuf message implementation for struct DataStore
message DataStore {
  DSLinker DSLinker = 1;
  string Signature = 2;
}

// Protobuf message implementation for struct DSLinker
message DSLinker {
  DSPreImage DSPreImage = 1;
  string TxHash = 2;
}

// Protobuf message implementation for struct DSPreImage
message DSPreImage {
  uint32 ChainID = 1;
  string Index = 2;
  uint32 IssuedAt = 3;
  string Deposit = 4;
  string RawData = 5;
  uint32 TXOutIdx = 6;
  string Owner = 7;
  string Fee = 8;
}
