syntax = "proto3";

package proto;

service BootNode {
  rpc KnownNodes(BootNodeRequest) returns (BootNodeResponse) {}
}

message BootNodeRequest {}

message BootNodeResponse {
  repeated string Peers = 1;
}
